 * 'sip show peers', 'iax show peers', and 'dahdi show peers' now contains a
   Description field which can be populated with 'description' in the channel
   configuration files (sip.conf, iax2.conf, and chan_dahdi.conf).

CDR
--------------------------
 * The filter option in cdr_adaptive_odbc now supports negating the argument,
   thus allowing records which do NOT match the specified filter.

CODECS
--------------------------
 * Ability to define custom SILK formats in codecs.conf.
 * Addition of speex32 audio format with translation.
 * CELT codec pass-through support and ability to define
   custom CELT formats in codecs.conf.
 * Ability to read raw signed linear files with sample rates
   ranging from 8khz - 192khz.  The new file extensions introduced
   are .sln12, .sln24, .sln32, .sln44, .sln48, .sln96, .sln192.

ConfBridge
--------------------------
 * New highly optimized and customizable ConfBridge application capable of
   mixing audio at sample rates ranging from 8khz-96khz.
 * CONFBRIDGE dialplan function capable of creating dynamic ConfBridge user
   and bridge profiles on a channel.
 * CONFBRIDGE_INFO dialplan function capable of retrieving information 
   about a conference such as locked status and number of parties, admins,
   and marked users.
 * Addition of video_mode option in confbridge.conf for adding video support
   into a bridge profile.
 * Addition of the follow_talker video_mode in confbridge.conf.  This video
   mode dynamically switches the video feed to always display the loudest talker
   supplying video in the conference.

Dialplan Variables
------------------
 * Added ASTETCDIR, ASTMODDIR, ASTVARLIBDIR, ASTDBDIR, ASTKEYDIR, ASTDATADIR,
   ASTAGIDIR, ASTSPOOLDIR, ASTRUNDIR, ASTLOGDIR which hold the equivalent
   variables from asterisk.conf.

Dialplan Functions
------------------
 * Addition of the JITTERBUFFER dialplan function. This function allows
   for jitterbuffering to occur on the read side of a channel.  By using